# g474_cmake_demo

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  MY_GPIO_EXTI.ioc  MY_GPIO_EXTI.xml  README.md  STM32G474RETx.cmake
Inc/: main.h  stm32g4xx_it.h
Src/: main.c  stm32g4xx_it.c
